--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -1,29 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<meta charset="utf-8">
-		<title>Admin page</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<head>
+   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+   <meta charset="utf-8">
+   <title>Admin page</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-		<link rel="stylesheet" href="css/bootstrap.min.css" >
-		<script src="js/bootstrap.min.js"></script>
+   <link rel="stylesheet" href="css/bootstrap.min.css">
+   <script src="js/bootstrap.min.js"></script>
 
-	</head>
+</head>
 
-  <body>
-    <div class="navbar navbar-default navbar-fixed-top">
+<body>
+   <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
-        <div class="navbar-header">
-          <a href="../" class="navbar-brand">reLog</a>
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-    </div>
-       </div>
+         <div class="navbar-header">
+            <a href="../" class="navbar-brand">reLog</a>
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+            </button>
+         </div>
+      </div>
+   </div>
 
-  </body>
+   <div class="panel panel-default">
+      <div class="panel-body">
+         Basic panel example
+      </div>
+   </div>
+
+   <div class="panel panel-default">
+      <div class="panel-heading">Panel heading without title</div>
+      <div class="panel-body">
+         Panel content
+      </div>
+   </div>
+
+   <div class="panel panel-default">
+      <div class="panel-heading">
+         <h3 class="panel-title">Panel title</h3>
+      </div>
+      <div class="panel-body">
+         <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-default">1</button>
+            <button type="button" class="btn btn-default">2</button>
+
+            <div class="btn-group" role="group">
+               <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+      <span class="caret"></span>
+               </button>
+               <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">Dropdown link</a></li>
+                  <li><a href="#">Dropdown link</a></li>
+               </ul>
+            </div>
+         </div>
+      </div>
+   </div>
+
+</body>
 </html>
